--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://jjimenpanchal.github.io/first_react_app/blob/main/src/App.jsx",
+	"homepage": "https://jjimenpanchal.github.io/first_react_app/",
 	"name": "second_app",
 	"version": "0.1.0",
 	"private": true,
